Added eureka server

--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,13 @@
         <module>Product-Service</module>
         <module>Order-Service</module>
         <module>Inventory-Service</module>
+        <module>Discovery-Server</module>
     </modules>
 
     <properties>
         <maven.compiler.source>19</maven.compiler.source>
         <maven.compiler.target>19</maven.compiler.target>
+        <spring-cloud.version>2022.0.1</spring-cloud.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -29,6 +31,13 @@
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
                 <version>1.16.3</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
